--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^3.0.1"
   },
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "request": "^2.87.0",
